syntax = "proto3";
package pbclient;
option go_package = "roomcell/pkg/pb/pbclient";
// 热血奔跑
enum ERunningStep
{
    ERunningStepReady        = 0;      // 准备阶段
    ERunningStepRunning      = 1;      // 奔跑阶段
    ERunningStepEnd          = 2;      // 结束
}

// 玩家游戏数据
message RunningPlayerGameData
{
    int64 RoleID = 1;       // 角色id
    string Nickname = 2;    // 昵称
    int32 Icon = 3;         // 图像
    bool IsOnline = 4;      // 是否在线
    int32 Ready = 5;        // 准备状态 0-未准备 1-准备了
}

// 房间游戏数据
message RoomRunningDetail {
    int32 RoomStep = 1;     // 房间游戏阶段 对应 EUndercoverStep
    int64 StepTime = 2;     // 阶段对应的开始时间戳
    map<int64,RunningPlayerGameData> PlayersGameData = 3; // 玩家游戏数据
    repeated int64 RankList = 4;    // 排名列表(数组元素为玩家id)
    int32 Distance = 5; // 距离
    int32 GameTime = 6; // 游戏时间
}
// ECMsgGamePushRunningRoomData = 90 // 热血奔跑-推送房间游戏数据
message ECMsgGamePushRunningRoomDataNotify
{
    RoomRunningDetail RoomGameData = 1;
}

// ECMsgGameRunningSendItem            = 91 // 热血奔跑-发射炸弹
message ECMsgGameRunningSendItemReq
{
    int64 RoleID = 1;
    int32 ItemID = 2;
}
message ECMsgGameRunningSendItemRsp
{
}

// ECMsgGamePushRunningSendItem        = 92 // 热血奔跑-推送发射炸弹
message ECMsgGamePushRunningSendItemNotify
{
    int64 RoleID = 1;
    int32 ItemID = 2;   // 道具id
}

// ECMsgGameRunningReachEnd            = 93 // 热血奔跑-到达终点
message ECMsgGameRunningReachEndReq
{
}
message ECMsgGameRunningReachEndRsp
{
}

// ECMsgGamePushRunningReachEnd        = 94 // 热血奔跑-推送有人到达终点了
message ECMsgGamePushRunningReachEndNotify
{
    int64 RoleID = 1;
}

// ECMsgGameRunningSetting      = 95 // 热血奔跑-游戏设定
message ECMsgGameRunningSettingReq
{
    int32 Distance = 1; // 距离
    int32 GameTime = 2; // 游戏时间
}
message ECMsgGameRunningSettingRsp
{
    
}
// ECMsgGamePushRunningSetting  = 96 // 热血奔跑-推送游戏设定
message ECMsgGamePushRunningSettingNotify
{
    int32 Distance = 1; // 距离
    int32 GameTime = 2; // 游戏时间
}